# NodeEditor_External

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  nodeitem.cpp  nodeitem.h  nodescene.cpp  nodescene.h
elements/: connection.cpp  connection.h  editormenu.cpp  editormenuitem.cpp  editormenuitem.h  ioelement.cpp  ioelement.h  nodeoutlinerectitem.cpp  nodeoutlinerectitem.h
nodes/: CMakeLists.txt  attributenode.cpp  attributenode.h  colornode.cpp  colornode.h  editornode.cpp  editornode.h  geometrynode.cpp  geometrynode.h  getshapesnode.cpp  getshapesnode.h  layernode.cpp  layernode.h  mathnode.cpp  node.cpp  node.h  noisenode.cpp  outputnode.cpp  previewnode.cpp  previewnode.h  shapenode.cpp  valuenode.cpp  valuenode.h
standalone/: CMakeLists.txt  mainwindow.ui  nodescene.cpp  nodescene.h
standalone/nodes/: editornode.cpp  editornode.h  getshapesnode.cpp  getshapesnode.h  layernode.cpp  previewnode.cpp  valuenode.cpp
vectornodesdocker/: nodescene.cpp
vectornodesdocker/nodes/: getshapesnode.cpp  getshapesnode.h
